--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,34 @@
 body {
     background-color: rgb(60, 60, 60);
 }
-#canvas {
+#container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 5px;
+}
+#panel {
+    grid-column: 1;
+    width: 200px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+}
+button {
+    color: white;
+    background-color: rgb(24, 0, 177);
+    border: none;
+    padding: 5px;
+    border-radius: 20px;
+    font-size: 30px;
+    transition: padding 0.3s ease;
+}
+button:hover {
+    padding: 10px;
+}
+#canvas {
     background-color: rgb(2, 128, 0);
+    grid-column: 2;
 }
